# FastAPI

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  database.sqlite  fib.py  index.html  main.py  pre-commit.ps1  pyproject.toml  pytest.ini  requirements.txt  run.ps1
app/: config.py  create_table.py  create_table.sql  database.py  db.py  dependencies.py  logger.py  main.py  main.py.old  main.py1.old  main.py2.old  main.py3.old  main.py4.old  main.py5.old  main.py7.old  main.py8.old  models.py  rbac.py  security.py
app/tests/: conftest.py  test_main.py
examples/: index.html  load_files.html  main.html
