[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"