[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI project"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = {extras = ["email"], version = "^2.11.7"}
pymorphy2 = "^0.9.1"
setuptools = "^80.9.0"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
pyjwt = "^2.10.1"
bcrypt = ">=4.0.0"
passlib = ">=1.7.4"
unicorn = "^2.1.3"
supabase = "^2.16.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
flake8 = "*"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"